--- a/MonoUI/MonoUI.csproj
+++ b/MonoUI/MonoUI.csproj
@@ -17,7 +17,7 @@
     <DebugType>full</DebugType>
     <Optimize>false</Optimize>
     <OutputPath>bin\Debug\</OutputPath>
-    <DefineConstants>DEBUG;TRACE</DefineConstants>
+    <DefineConstants>TRACE;DEBUG;Debug</DefineConstants>
     <ErrorReport>prompt</ErrorReport>
     <WarningLevel>4</WarningLevel>
   </PropertyGroup>
@@ -36,6 +36,7 @@
     </Reference>
     <Reference Include="System" />
     <Reference Include="System.Core" />
+    <Reference Include="System.Drawing" />
     <Reference Include="System.Xml.Linq" />
     <Reference Include="System.Data.DataSetExtensions" />
     <Reference Include="Microsoft.CSharp" />
@@ -48,6 +49,7 @@
     <Compile Include="GUIContainer.cs" />
     <Compile Include="GUIElement.cs" />
     <Compile Include="GUIGridView.cs" />
+    <Compile Include="GUICheckBox.cs" />
     <Compile Include="GUILabel.cs" />
     <Compile Include="GUIListView.cs" />
     <Compile Include="GUIPanel.cs" />
@@ -64,6 +66,7 @@
       <DependentUpon>Resources.resx</DependentUpon>
     </Compile>
     <Compile Include="SimpleServiceProvider.cs" />
+    <Compile Include="StaticContentLoader.cs" />
     <Compile Include="Utils.cs" />
   </ItemGroup>
   <ItemGroup>
@@ -73,7 +76,17 @@
     </EmbeddedResource>
   </ItemGroup>
   <ItemGroup>
+    <None Include="Resources\CheckBox_Checked.xnb" />
+    <None Include="Resources\CheckBox_Unchecked.xnb" />
+    <None Include="Resources\debugFont.xnb" />
+    <None Include="Resources\Font_Arial_10.xnb" />
     <None Include="Resources\guifont.xnb" />
+  </ItemGroup>
+  <ItemGroup>
+    <None Include="Resources\CheckBox_Checked.png" />
+  </ItemGroup>
+  <ItemGroup>
+    <None Include="Resources\CheckBox_Unchecked.png" />
   </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
   <!-- To modify your build process, add your task inside one of the targets below and uncomment it. 
