Fixed old monogame references and some networking
- Fixed to use newer monogame version
- Fixed some shader issues
- Fixed a little bit of networking, still needs a fair bit of work

--- a/GameLauncher/GameLauncher.csproj
+++ b/GameLauncher/GameLauncher.csproj
@@ -102,7 +102,7 @@
   </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
   <PropertyGroup>
-    <PostBuildEvent>copy "$(TargetPath)" "$(SolutionDir)$(SolutionName)\bin\WindowsGL\Debug\Launcher.exe" /y</PostBuildEvent>
+    <PostBuildEvent>copy "$(TargetPath)" "$(SolutionDir)DoodleEmpires\$(OutDir)DoodleEmpires.exe" /y</PostBuildEvent>
   </PropertyGroup>
   <!-- To modify your build process, add your task inside one of the targets below and uncomment it. 
        Other similar extension points exist, see Microsoft.Common.targets.
